# geo-visibility

./: Cargo.toml  README.md  shell.nix
.github/: dependabot.yml
src/: angle_comparator.rs  comparable_line.rs  lib.rs  orientation.rs  ray.rs  utils.rs  visibility.rs  visibility_event.rs
