[package]
name = "geo-visibility"
version = "0.3.1-alpha.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"
license = "ISC"
readme = "README.md"
repository = "https://github.com/lelongg/geo-visibility"
documentation = "https://docs.rs/geo-visibility/"
description = "Compute visibility polygon"
keywords = ["geo", "polygon", "visibility"]
categories = ["algorithms"]

[dependencies]
approx = "0.3.2"
geo = "0.16.0"
geo-clipper = "0.2.0"

[dev-dependencies]
rand_core = "0.5.1"
rand_pcg = "0.2.1"
data-uri-utils = "0.1.0"
geo-svg = "0.2.3"
geo-rand = "0.2.2"
