[package]
name = "geo-visibility"
version = "0.3.1-alpha.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"
license = "ISC"
readme = "README.md"
repository = "https://github.com/lelongg/geo-visibility"
documentation = "https://docs.rs/geo-visibility/"
description = "Compute visibility polygon"
keywords = ["geo", "polygon", "visibility"]
categories = ["algorithms"]

[dependencies]
approx = "0.4.0"
geo = "0.17.1"
geo-clipper = "0.5.0"

[dev-dependencies]
rand_core = "0.6.2"
rand_pcg = "0.3.0"
data-uri-utils = "0.1.0"
geo-svg = "0.5.0"
geo-rand = "0.3.0"
